[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/UI/Pause.gd" type="Script" id=1]
[ext_resource path="res://assets/audio/SFX/ui_click.wav" type="AudioStream" id=2]

[node name="PauseMenu" type="ColorRect"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.501961 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -70.0
margin_right = 50.0
margin_bottom = 70.0
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="Button" parent="Buttons"]
margin_right = 100.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 40 )

[node name="Settings" type="Button" parent="Buttons"]
margin_top = 50.0
margin_right = 100.0
margin_bottom = 90.0
rect_min_size = Vector2( 100, 40 )

[node name="Quit" type="Button" parent="Buttons"]
margin_top = 100.0
margin_right = 100.0
margin_bottom = 140.0
rect_min_size = Vector2( 100, 40 )

[node name="UI_Audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
[connection signal="pressed" from="Buttons/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Buttons/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Buttons/Quit" to="." method="_on_Quit_pressed"]
[connection signal="finished" from="UI_Audio" to="." method="_on_UI_Audio_finished"]
